2-way clipboard transfer in wsl

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,16 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # Set prefix to Ctrl-Space
 unbind-key C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
 #bind-key Left last-window
-bind-key C-Left select-window -p
-bind-key C-Right select-window -n
+bind-key C-Left previous-window
+bind-key C-Right next-window 
 
 setw -g mode-keys vi
 
@@ -35,5 +40,10 @@ set-option -g default-shell /bin/zsh
 set -g history-limit 5000
 set -g repeat-time 1000
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 set-option -ga update-environment '$PATH'
 set -g default-command $SHELL
+
+
