Switch theme to no-clown-fiesta

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Set prefix to Ctrl-Space
-unbind-key C-b
+
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
@@ -13,6 +13,14 @@ bind-key C-Left previous-window
 bind-key C-Right next-window 
 
 setw -g mode-keys vi
+set -g mouse on
+
+set -g focus-events on
+
+# tmux doesn't play well with nvim. 
+set -s escape-time 0
+
+set -g display-time 4000
 
 set -g status-position bottom
 set -g status-bg colour233
@@ -31,10 +39,11 @@ set-option -g automatic-rename on
 # See: https://man.openbsd.org/OpenBSD-current/man1/tmux.1#FORMATS
 set-option -g automatic-rename-format '#{=/-16/..:#{?#{==:#{pane_current_command},zsh}, #{s|#(echo $HOME)|~|:pane_current_path} ,#{pane_current_command}}}'
 
-setw -g window-status-current-format ' #[fg=colour250,bg=colour235] #I #[fg=colour255,bg=colour33,bold] #W '
+setw -g window-status-current-format ' #[fg=colour250,bg=colour235] #I #[fg=colour253,bg=colour33,bold] #W '
 setw -g window-status-format ' #[fg=colour250,bg=colour235] #I #[fg=default,bg=default] #W '
 
 set -g default-terminal "screen-256color"
+set -g terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell /bin/zsh
 
 set -g history-limit 5000
