--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
-     "diagnostic.checkCurrentLine": true
+     "diagnostic.checkCurrentLine": true,
+     "clangd.compilationDatabasePath": "."
 }
 
